<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_weight="1"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--    result-->
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2" >

        <LinearLayout
            android:gravity="end"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtOperator"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:textSize="58dp"
                android:text="123"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:gravity="end"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtResult"
                android:layout_gravity="center_vertical"
                android:textSize="36dp"
                android:text="123"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <!--    keyboard-->
    <LinearLayout
        android:id="@+id/keyboard"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <!--number-->
        <LinearLayout
            android:paddingRight="1dp"
            android:background="@drawable/keyboard_background"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--            row1-->
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:onClick="numHandle"
                    android:id="@+id/btn7"
                    android:textSize="36dp"
                    android:text="@string/seven"
                    android:background="@drawable/keyboard_bg2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:onClick="numHandle"
                    android:id="@+id/btn4"
                    android:text="@string/four"
                    android:textSize="36dp"
                    android:background="@drawable/keyboard_bg2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:onClick="numHandle"
                    android:id="@+id/btn1"
                    android:text="@string/one"
                    android:textSize="36dp"
                    android:background="@drawable/keyboard_bg2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:onClick="numHandle"
                    android:id="@+id/btn0"
                    android:text="@string/zero"
                    android:textSize="36dp"
                    android:background="@drawable/keyboard_bg2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <!--            row2-->
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:onClick="numHandle"
                    android:id="@+id/btn8"
                    android:textSize="36dp"
                    android:text="@string/eight"
                    android:background="@drawable/keyboard_bg2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:onClick="numHandle"
                    android:id="@+id/btn5"
                    android:text="@string/five"
                    android:textSize="36dp"
                    android:background="@drawable/keyboard_bg2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:onClick="numHandle"
                    android:id="@+id/btn2"
                    android:text="@string/two"
                    android:textSize="36dp"
                    android:background="@drawable/keyboard_bg2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/btnDot"
                    android:text="."
                    android:textSize="36dp"
                    android:background="@drawable/keyboard_bg2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <!--            row3-->
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:onClick="numHandle"
                    android:id="@+id/btn9"
                    android:textSize="36dp"
                    android:text="@string/nine"
                    android:background="@drawable/keyboard_bg2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:onClick="numHandle"
                    android:id="@+id/btn6"
                    android:text="@string/six"
                    android:textSize="36dp"
                    android:background="@drawable/keyboard_bg2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:onClick="numHandle"
                    android:id="@+id/btn3"
                    android:text="@string/three"
                    android:textSize="36dp"
                    android:background="@drawable/keyboard_bg2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:onClick="equalHandle"
                    android:id="@+id/btnEqual"
                    android:text="@string/equal"
                    android:textSize="36dp"
                    android:background="@drawable/keyboard_bg2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>

        <!--operator-->
        <LinearLayout
            android:background="@drawable/keyboard_bg2"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:onClick="clear"
                    android:id="@+id/btnDel"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="36dp"
                    android:text="@string/clear"
                    android:background="@drawable/keyboard_bg2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:onClick="opHandle"
                    android:id="@+id/btnDivide"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/divide"
                    android:textSize="36dp"
                    android:background="@drawable/keyboard_bg2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:onClick="opHandle"
                    android:id="@+id/btnMultiply"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/multi"
                    android:textSize="36dp"
                    android:background="@drawable/keyboard_bg2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:onClick="opHandle"
                    android:id="@+id/btnMinus"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/sub"
                    android:textSize="36dp"
                    android:background="@drawable/keyboard_bg2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:onClick="opHandle"
                    android:id="@+id/btnPlus"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="36dp"
                    android:text="@string/add"
                    android:background="@drawable/keyboard_bg2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
